# Polaris

./: .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  polaris.py  pyproject.toml  pytest.ini  ruff.toml  utils.py
.streamlit/: pages_sections.toml
backend/: main.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  draggableNode.tsx  index.css  main.tsx  store.tsx  submit.tsx  toolbar.tsx  ui.tsx
frontend/src/nodes/: BaseNode.tsx  CustomNode1.tsx  CustomNode2.tsx  CustomNode3.tsx  CustomNode4.tsx  CustomNode5.tsx  FilterNode.tsx  InputNode.tsx  OutputNode.tsx  TextNode.tsx
pages/: data_quality_page.py  eda_page.py
