[project]
name = "polaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "plotly>=6.0.1",
    "polars>=1.25.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "seaborn>=0.13.2",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
